--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -19,15 +19,30 @@ spring:
             enabled: false
         livereload:
             enabled: false
+    # datasource:
+    #     type: com.zaxxer.hikari.HikariDataSource
+    #     url: jdbc:postgresql://localhost:5432/example
+    #     username: c036993
+    #     # password:
+    # jpa:
+    #     database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
+    #     database: POSTGRESQL
+    #     show-sql: true
+    #     properties:
+    #         hibernate.id.new_generator_mappings: true
+    #         hibernate.cache.use_second_level_cache: true
+    #         hibernate.cache.use_query_cache: false
+    #         hibernate.generate_statistics: false
+    #         hibernate.cache.region.factory_class: io.github.jhipster.config.jcache.NoDefaultJCacheRegionFactory
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/GreatBigExampleApplication
-        username: GreatBigExampleUser
-        password: password
+        url: jdbc:mysql://localhost:3306/example
+        username: root
+        # password:
     jpa:
-        database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
-        database: POSTGRESQL
-        show-sql: false
+        database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+        database: MYSQL
+        show-sql: true
         properties:
             hibernate.id.new_generator_mappings: true
             hibernate.cache.use_second_level_cache: true
